#88 fix mobile word wrap at wrong place on about page

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -25,7 +25,7 @@ body {
 
 #about p {
   margin-top: 20px;
-  text-indent: 5vw;
+  text-indent: 4em;
   line-height: 2em;
   color: #edd;
 }
